# Heyo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/voice/: README.md  client.py  config.py  main.py  setup.ps1  stt.py  tts.py  wake.py
heyo/: __init__.py  config.py
heyo/api/: app.py  chat.py  sessions.py  voice.py
heyo/graph/: build.py  context.py  planner.py  router.py  state.py
heyo/graph/agents/: apps.py  base.py  chat.py  files.py  mcp.py  web.py
heyo/llm/: client.py
heyo/mcp/: manager.py
heyo/memory/: embeddings.py  qdrant.py
heyo/skills/: loader.py
heyo/voice_io/: __init__.py  stt.py  tts.py
scripts/: fit_models.py  run.sh  setup.sh  test_wake.py
skills/_examples/: open-app.md
tests/: conftest.py  test_agents_m4.py  test_api.py  test_graph.py  test_skills.py  test_soft_tool_calls.py  test_stt_backend.py  test_voice_api.py
ui/: index.html
