[project]
name = "heyo"
version = "0.1.0"
description = "Heyo - on-premise multi-LLM agentic assistant (LangGraph, Ollama, FastMCP, Qdrant, FastAPI)"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.60",
    "langchain-core>=0.3.30",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "qdrant-client>=1.12",
    "fastmcp>=2.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
web = ["playwright>=1.48"]
# server-side ears + mouth (/voice/transcribe, /voice/speak)
# vosk = STT that works when HuggingFace is unreachable (model from a different
# host); faster-whisper = higher accuracy when its model can be fetched; av decodes
# the browser's webm/opus. STT auto-prefers whisper-if-cached, else vosk.
voice = ["piper-tts>=1.4", "vosk>=0.3.44", "av>=11", "faster-whisper>=1.0"]
# thin mic/speaker client (apps/voice/client.py) — STT/TTS happen on the server
voice-client = [
    "sounddevice>=0.5",
    "numpy>=1.26",
    "httpx>=0.27",
    "vosk>=0.3.44",
    "openwakeword>=0.6",
    "onnxruntime>=1.18",
    "keyboard>=0.13.5; platform_system == 'Windows'",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.7", "asgi-lifespan>=2.1"]

[project.scripts]
heyo-api = "heyo.api.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["heyo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
